# GhostHIDe

./: CMakeLists.txt  README.md  prj.conf
boards/: stm32f4_disco.overlay
drivers/ch375/include/: ch375.h  ch375_uart.h  usb.h
drivers/ch375/src/: ch375.c  ch375_uart.c
src/: main.c
